--- a/dove_lo_butto/ricerca.html
+++ b/dove_lo_butto/ricerca.html
@@ -57,7 +57,7 @@
                     <br>
                     <br>
                     <form action="./ricerca_codici.php" method="post">
-                    <input type="text" placeholder="Inserisci il codice ISBN" name="inputCodice"> </div>
+                    <input type="text" placeholder="Inserisci il codice ISBN" name="inputCodice"> required </div>
                     <br>
                     <div class="bottone" > <button type="submit" class="btn btn-primary">Conferma</button>
                     </div>
