--- a/rifiuti_ingombranti/richiesta.html
+++ b/rifiuti_ingombranti/richiesta.html
@@ -62,7 +62,7 @@
                 <div class="text-center">
                 <h1 class="text-center"><b>Il tuo Municipio</b></h1>
                 <br>
-                <select id="municipio" class="defaultselect" size="1" cols="20">
+                <select id="municipio" class="defaultselect" size="1" cols="20" required>
                     <option selected="" value="">Seleziona un Municipio</option>
                     <option value="Municipio I"> Municipio I</option>
                     <option value="Municipio II"> Municipio II</option>
