--- a/calendari/scelta.html
+++ b/calendari/scelta.html
@@ -7,70 +7,12 @@
     <link rel="stylesheet" href="../bootstrap/css/bootstrap.css" />
     <link rel="stylesheet" href="../stile.css" />
     <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
+    <script src="./show_cal.js" type="application/javascript"></script>
+
 
     <title>Document</title>
 </head>
 
-<script type="text/javascript">
-
-    function Mostra() {
-        if (document.getElementById("muni").value=="Municipio I" || document.getElementById("muni").value=="Municipio XI" || document.getElementById("muni").value=="Municipio XV" ) {
-        $(document).ready(function() {
-                $("div.box_m1").addClass("box_open");  
-        });
-        }
-        if (document.getElementById("muni").value=="Municipio II" || document.getElementById("muni").value=="Municipio XII" || document.getElementById("muni").value=="Municipio XIV") {
-        $(document).ready(function() {
-                $("div.box_m2").addClass("box_open");  
-        });
-        }
-        if (document.getElementById("muni").value=="Municipio III" || document.getElementById("muni").value=="Municipio VI" || document.getElementById("muni").value=="Municipio XIII") {
-        $(document).ready(function() {
-                $("div.box_m3").addClass("box_open");  
-        });
-        }
-        if (document.getElementById("muni").value=="Municipio IV" || document.getElementById("muni").value=="Municipio VII" || document.getElementById("muni").value=="Municipio IX") {
-        $(document).ready(function() {
-                $("div.box_m4").addClass("box_open");  
-        });
-        }
-        if (document.getElementById("muni").value=="Municipio V" || document.getElementById("muni").value=="Municipio X" || document.getElementById("muni").value=="Municipio VIII") {
-        $(document).ready(function() {
-                $("div.box_m5").addClass("box_open");  
-        });
-        }
-    }
-
-    function Chiudi() {
-        if (document.getElementById("muni").value=="Municipio I" || document.getElementById("muni").value=="Municipio XI" || document.getElementById("muni").value=="Municipio XV" ) {
-        $(document).ready(function() {
-                $("div.box_m1").removeClass("box_open");  
-        });
-        }
-        if (document.getElementById("muni").value=="Municipio II" || document.getElementById("muni").value=="Municipio XII" || document.getElementById("muni").value=="Municipio XIV") {
-        $(document).ready(function() {
-                $("div.box_m2").removeClass("box_open");  
-        });
-        }
-        if (document.getElementById("muni").value=="Municipio III" || document.getElementById("muni").value=="Municipio VI" || document.getElementById("muni").value=="Municipio XIII") {
-        $(document).ready(function() {
-                $("div.box_m3").removeClass("box_open");  
-        });
-        }
-        if (document.getElementById("muni").value=="Municipio IV" || document.getElementById("muni").value=="Municipio VII" || document.getElementById("muni").value=="Municipio IX") {
-        $(document).ready(function() {
-                $("div.box_m4").removeClass("box_open");  
-        });
-        }
-        if (document.getElementById("muni").value=="Municipio V" || document.getElementById("muni").value=="Municipio X" || document.getElementById("muni").value=="Municipio VIII") {
-        $(document).ready(function() {
-                $("div.box_m5").removeClass("box_open");  
-        });
-        }
-        
-
-    }
-</script>
 <body >
     <nav class="navbar navbar-expand-sm navbar-light">
         <a class="navbar-brand mb-0 h1">
