--- a/index.html
+++ b/index.html
@@ -93,8 +93,7 @@
         </div>
 </div>
 <br>
-<button type="button" class="btn btn-primary" href="#" >Visualizza tutte le news</button>
-<br>
+<a href="./news.html"><button type="button" class="btn btn-primary">Visualizza tutte le news</button></a><br>
 <br>
 
 
