--- a/calendari/scelta.html
+++ b/calendari/scelta.html
@@ -111,7 +111,7 @@
         </table>
     </div>
     <br>
-    <div class="text-center"> <button type="button" class="btn btn-primary" onclick="return Chiudi()">Chiudi</button></div>
+    <div class="text-center"> <button type="button" class="btn btn-primary" onclick="return Chiudi('box_m1')">Chiudi</button></div>
 </div>
 
 <div class="box_m2">
@@ -136,7 +136,7 @@
         </table>
     </div>
     <br>
-    <div class="text-center"> <button type="button" class="btn btn-primary" onclick="return Chiudi()">Chiudi</button></div>
+    <div class="text-center"> <button type="button" class="btn btn-primary" onclick="return Chiudi('box_m2')">Chiudi</button></div>
 </div>
 
 <div class="box_m3">
@@ -161,7 +161,7 @@
         </table>
     </div>
     <br>
-    <div class="text-center"> <button type="button" class="btn btn-primary" onclick="return Chiudi()">Chiudi</button></div>
+    <div class="text-center"> <button type="button" class="btn btn-primary" onclick="return Chiudi('box_m3')">Chiudi</button></div>
 </div>
 
 <div class="box_m4">
@@ -186,7 +186,7 @@
         </table>
     </div>
     <br>
-    <div class="text-center"> <button type="button" class="btn btn-primary" onclick="return Chiudi()">Chiudi</button></div>
+    <div class="text-center"> <button type="button" class="btn btn-primary" onclick="return Chiudi('box_m4')">Chiudi</button></div>
 </div>
 
 <div class="box_m5">
@@ -211,7 +211,7 @@
         </table>
     </div>
     <br>
-    <div class="text-center"> <button type="button" class="btn btn-primary" onclick="return Chiudi()">Chiudi</button></div>
+    <div class="text-center"> <button type="button" class="btn btn-primary" onclick="return Chiudi('box_m5')">Chiudi</button></div>
 </div>
 
 
