asjusted map zoom

--- a/calendari/scelta.html
+++ b/calendari/scelta.html
@@ -266,7 +266,7 @@
             <br>
             <br>
             <div class="row">
-                <div class="text-center"> <b>Isole ecologiche</b> <br> <br></div>
+                <div class="text-center"> Qui di seguito sono indicate le principali <b>Isole ecologiche</b> <br> <br></div>
             </div>
 
             <div class="row">
@@ -298,7 +298,7 @@
                 function mapContent(){
                     var api_key = 'YDHAncYnyUrCNHbmTDXEmFi1NG5YQiQR';
                     var latAndLong = {lat: 41.902782, lng: 12.496366}; 
-                    var zoomLevel = 14;
+                    var zoomLevel = 11;
             
                     var map = tt.map({
                         container: 'map',
