--- a/calendari/scelta.html
+++ b/calendari/scelta.html
@@ -12,7 +12,7 @@
     <script onload="mapContent();" src="https://api.tomtom.com/maps-sdk-for-web/cdn/6.x/6.5.0/maps/maps-web.min.js" defer></script>
 
 
-    <title>Document</title>
+    <title>JunkJedis</title>
 </head>
 
 <body >
