--- a/dove_lo_butto/carta.html
+++ b/dove_lo_butto/carta.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../bootstrap/css/bootstrap.css" />
     <link rel="stylesheet" href="../stile.css" />
 
-    <title>Document</title>
+    <title>JunkJedis</title>
 </head>
 <body >
     <nav class="navbar navbar-expand-sm navbar-light">
