--- a/rifiuti_ingombranti/richiesta.html
+++ b/rifiuti_ingombranti/richiesta.html
@@ -9,7 +9,7 @@
     <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
 
 
-    <title>Document</title>
+    <title>JunkJedis</title>
     
 </head>
 
