--- a/calendari/scelta.html
+++ b/calendari/scelta.html
@@ -84,7 +84,7 @@
                     </select>
                 </div>
                 <br>
-                <div class="bottone" name="conferma"> <button type="button" class="btn btn-primary" onclick="return Mostra()">Conferma</button>
+                <div class="bottone" style="padding-left: 77%;" name="conferma"> <button type="button" class="btn btn-primary" onclick="return Mostra()">Conferma</button>
                 </div>
             </div>
             <div class="col-sm-4">
