--- a/calendari/scelta.html
+++ b/calendari/scelta.html
@@ -51,7 +51,9 @@
             </ul>    
         </div>        
     </nav>
-    <div class="titoli_centrali_calendari"><b><u>Calendari raccolta rifiuti porta a porta</u></b></div>
+    <br>
+    <div class="text-center"><h2><u>Calendari raccolta rifiuti porta a porta</u></h2></div>
+    <br>
     <div class="container">
         <div class="row" >
             <div class="col-sm-4">
