--- a/dove_lo_butto/ricerca.html
+++ b/dove_lo_butto/ricerca.html
@@ -45,7 +45,9 @@
             </ul>    
         </div>        
     </nav>
-    <div class="titoli_centrali_dlb"><b><u>Dove lo butto?</u></b></div>
+    <br>
+    <div class="text-center"><h2><u>Dove lo butto?</u></h2></div>
+    <br>
             <div class="text-center"><b>Inserisci il codice a barre del prodotto per ottenere le informazioni corrette su come differenziarlo</b>
                     <form action="./ricerca_codici.php" method="post">
                     <input class="form-control" type="text" placeholder="Inserisci il codice ISBN" name="inputCodice" required>
