--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
 </div>
 <br>
-<div class="titoli"> <b><u>Cosa puoi fare con l'app?</u></b> </div>
+<div class="text-center"> <h2><u>Cosa puoi fare con l'app?</u></h2> </div>
 <br>
 <div class="c1"> Con JunkJedis puoi:</div>
 <div class="c2">
@@ -93,7 +93,7 @@
 </ul>
 </div>
 <br>
-<div class="titoli"> <b><u>Ultime comunicazioni</u></b> </div>
+<div class="text-center"> <h2><u>Ultime comunicazioni</u></h2> </div>
 <br>
 
 <div class="owl-carousel owl-theme">
