--- a/registrazione/registrazione_index.html
+++ b/registrazione/registrazione_index.html
@@ -44,8 +44,9 @@
             </ul>    
         </div>        
     </nav>
-    <div class="titoli_centrali"><b><u>Raccolta rifiuti ingombranti</u></b></div>
-    <form  class="registrazione" action="./registrazione.php" method="POST">
+    <br>
+    <div class="text-center"><h2><u>Raccolta rifiuti ingombranti</u></h2></div>
+    <form class="text-center" class="registrazione" action="./registrazione.php" method="POST">
         <div class="form-group">
             <h1 class="text-lg-center"><b>Registrazione</b></h1>
             <br>
