--- a/rifiuti_ingombranti/login_index.html
+++ b/rifiuti_ingombranti/login_index.html
@@ -44,7 +44,8 @@
             </ul>    
         </div>        
     </nav>
-    <div class="titoli_centrali"><b><u>Raccolta rifiuti ingombranti</u></b></div>
+    <br>
+    <div class="text-center"><h2><u>Raccolta rifiuti ingombranti</u></h2></div>
     <form  action="./login.php" method="POST" onsubmit="">
         <div class="form-group">
             <h1 class="text-center"><b>Login</b></h1>
