--- a/rifiuti_ingombranti/wrong_pswd.html
+++ b/rifiuti_ingombranti/wrong_pswd.html
@@ -9,12 +9,11 @@
 
     <title>JunkJedis</title>
 </head>
-<body>
+<body style= "background-color: #54cc9a">
     <div class="text-center">
         <br>
-        <img src="../images/logo_ok.webp" width="100px">
+        <img src="../images/logo_verde.png" width="100px">
         <br>
-        <h1>JunkJedis</h1>
         <br>
         <h2>La password e' errata! <br>
             Clicca <a href=./login_index.html> qui </a> per provare ad accedere di nuovo</h2>
