--- a/rifiuti_ingombranti/login_index.html
+++ b/rifiuti_ingombranti/login_index.html
@@ -9,11 +9,10 @@
 
     <title>JunkJedis</title>
 </head>
-<body >
+<body style= "background-color: #54cc9a">
     <nav class="navbar navbar-expand-sm navbar-light">
         <a class="navbar-brand mb-0 h1">
-            <img class= "d-inline-block align-top" src="../images/logo_ok.webp" width="50" height="30">
-            JunkJedis
+            <img class= "d-inline-block align-top" src="../images/logo_verde.png" width="70" height="70">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -57,7 +56,7 @@
             class="form-control" required>
             <div class="text-sm-center">Se non hai ancora effettuato la registrazione, clicca <a href="../registrazione/registrazione_index.html"><u>qui</u></a></div>
             <br>
-            <button type="submit" class="btn btn-primary">Accedi</button>
+            <button type="submit" class="btn btn-success">Accedi</button>
         </div>
     </form>
 <!-- Script for Navbar Collapse       see Documentation link: https://getbootstrap.com/docs/4.0/getting-started/introduction/-->
