--- a/dove_lo_butto/indifferenziato.html
+++ b/dove_lo_butto/indifferenziato.html
@@ -10,11 +10,10 @@
 
     <title>JunkJedis</title>
 </head>
-<body >
+<body style= "background-color: #54cc9a">
     <nav class="navbar navbar-expand-sm navbar-light">
         <a class="navbar-brand mb-0 h1">
-            <img class= "d-inline-block align-top" src="../images/logo_ok.webp" width="50" height="30">
-            JunkJedis
+            <img class= "d-inline-block align-top" src="../images/logo_verde.png" width="70" height="70">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -65,7 +64,7 @@
     </div>
     <br>
     <br>
-    <a href="./ricerca.html"> <div class="text-center"> <button type="submit" class="btn btn-primary">Fai una nuova ricerca</button></a></div>
+    <a href="./ricerca.html"> <div class="text-center"> <button type="submit" class="btn btn-success">Fai una nuova ricerca</button></a></div>
 
 
 
