--- a/dove_lo_butto/ricerca.html
+++ b/dove_lo_butto/ricerca.html
@@ -10,11 +10,10 @@
 
     <title>JunkJedis</title>
 </head>
-<body >
+<body style= "background-color: #54cc9a">
     <nav class="navbar navbar-expand-sm navbar-light">
         <a class="navbar-brand mb-0 h1">
-            <img class= "d-inline-block align-top" src="../images/logo_ok.webp" width="50" height="30">
-            JunkJedis
+            <img class= "d-inline-block align-top" src="../images/logo_verde.png" width="70" height="70">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -46,13 +45,14 @@
         </div>        
     </nav>
     <br>
+    <br>
     <div class="text-center"><h2><u>Dove lo butto?</u></h2></div>
     <br>
-            <div class="text-center"><b>Inserisci il codice a barre del prodotto per ottenere le informazioni corrette su come differenziarlo</b>
+            <div class="text-center"><b>Inserisci il nome del prodotto da smaltire per ottenere le informazioni corrette su come differenziarlo</b>
                     <form action="./ricerca_codici.php" method="post">
-                    <input class="form-control" type="text" placeholder="Inserisci il codice ISBN" name="inputCodice" required>
+                    <input class="form-control" type="text" placeholder="Inserisci il prodotto da smaltire" name="inputNome" required>
                     <br>
-                    <button type="submit" class="btn btn-primary">Conferma</button>
+                    <button type="submit" class="btn btn-success">Conferma</button>
                     </form>
            
                 <img src="../images/Icona-dove-lo-butto (1).png" width="500px">
