--- a/dove_lo_butto/prod_not_exist.html
+++ b/dove_lo_butto/prod_not_exist.html
@@ -9,14 +9,13 @@
 
     <title>JunkJedis</title>
 </head>
-<body>
+<body style= "background-color: #54cc9a">
     <div class="text-center">
         <br>
-        <img src="../images/logo_ok.webp" width="100px">
+        <img src="../images/logo_verde.png" width="100px">
         <br>
-        <h1>JunkJedis</h1>
         <br>
-        <h2>Il codice inserito non corrisponde a nessun prodotto
+        <h2>Il nome inserito non corrisponde a nessun prodotto
             <br>
             Clicca <a href="./ricerca.html">qui</a> per effettuare una nuova ricerca
         </h2>
