--- a/calendari/scelta.html
+++ b/calendari/scelta.html
@@ -15,11 +15,10 @@
     <title>JunkJedis</title>
 </head>
 
-<body >
+<body style= "background-color: #54cc9a">
     <nav class="navbar navbar-expand-sm navbar-light">
         <a class="navbar-brand mb-0 h1">
-            <img class= "d-inline-block align-top" src="../images/logo_ok.webp" width="50" height="30">
-            JunkJedis
+            <img class= "d-inline-block align-top" src="../images/logo_verde.png" width="70" height="70">
         </a>
 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -51,7 +50,6 @@
             </ul>    
         </div>        
     </nav>
-    <br>
     <div class="text-center"><h2><u>Calendari raccolta rifiuti porta a porta</u></h2></div>
     <br>
     <div class="container">
@@ -86,7 +84,7 @@
                     </select>
                 </div>
                 <br>
-                <div class="bottone" style="padding-left: 77%;" name="conferma"> <button type="button" class="btn btn-primary" onclick="return Mostra()">Conferma</button>
+                <div class="bottone" style="padding-left: 77%;" name="conferma"> <button type="button" class="btn btn-success" onclick="return Mostra()">Conferma</button>
                 </div>
             </div>
             <div class="col-sm-4">
@@ -96,9 +94,9 @@
 </div>
 <br>
 
-<div class="box_m1">
+<div class="box_m1" >
     <div class="text-center">
-        <table class="table">
+        <table class="table" style= "background-color: #ffffff">
             <thead>
                 <tr>
                     <th scope="col">Raccolta organico</th>
@@ -118,12 +116,12 @@
         </table>
     </div>
     <br>
-    <div class="text-center"> <button type="button" class="btn btn-primary" onclick="return Chiudi('box_m1')">Chiudi</button></div>
+    <div class="text-center"> <button type="button" class="btn btn-success" onclick="return Chiudi('box_m1')">Chiudi</button></div>
 </div>
 
 <div class="box_m2">
     <div class="text-center">
-        <table class="table">
+        <table class="table" style= "background-color: #ffffff">
             <thead>
                 <tr>
                     <th scope="col">Raccolta organico</th>
@@ -143,12 +141,12 @@
         </table>
     </div>
     <br>
-    <div class="text-center"> <button type="button" class="btn btn-primary" onclick="return Chiudi('box_m2')">Chiudi</button></div>
+    <div class="text-center"> <button type="button" class="btn btn-success" onclick="return Chiudi('box_m2')">Chiudi</button></div>
 </div>
 
 <div class="box_m3">
     <div class="text-center">
-        <table class="table">
+        <table class="table" style= "background-color: #ffffff">
             <thead>
                 <tr>
                     <th scope="col">Raccolta organico</th>
@@ -168,12 +166,12 @@
         </table>
     </div>
     <br>
-    <div class="text-center"> <button type="button" class="btn btn-primary" onclick="return Chiudi('box_m3')">Chiudi</button></div>
+    <div class="text-center"> <button type="button" class="btn btn-success" onclick="return Chiudi('box_m3')">Chiudi</button></div>
 </div>
 
 <div class="box_m4">
     <div class="text-center">
-        <table class="table">
+        <table class="table" style= "background-color: #ffffff">
             <thead>
                 <tr>
                     <th scope="col">Raccolta organico</th>
@@ -193,12 +191,12 @@
         </table>
     </div>
     <br>
-    <div class="text-center"> <button type="button" class="btn btn-primary" onclick="return Chiudi('box_m4')">Chiudi</button></div>
+    <div class="text-center"> <button type="button" class="btn btn-success" onclick="return Chiudi('box_m4')">Chiudi</button></div>
 </div>
 
-<div class="box_m5">
+<div class="box_m5" >
     <div class="text-center">
-        <table class="table">
+        <table class="table" style= "background-color: #ffffff">
             <thead>
                 <tr>
                     <th scope="col">Raccolta organico</th>
@@ -218,7 +216,7 @@
         </table>
     </div>
     <br>
-    <div class="text-center"> <button type="button" class="btn btn-primary" onclick="return Chiudi('box_m5')">Chiudi</button></div>
+    <div class="text-center"> <button type="button" class="btn btn-success" onclick="return Chiudi('box_m5')">Chiudi</button></div>
 </div>
 
 
