--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
 
     <title>JunkJedis</title>
 </head>
-<body>
+<body style= "background-color: #54cc9a">
 
     <nav class="navbar navbar-expand-sm navbar-light">
         <a class="navbar-brand mb-0 h1">
-            <img class= "d-inline-block align-top" src="./images/logo_ok.webp" width="50" height="30">
-            JunkJedis
+            <img class= "d-inline-block align-top" src="./images/logo_verde.png" width="70" height="70">
+
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -77,14 +77,13 @@
   </nav>
   <br>
     <div class="text-center">
-        <img class= "img_home" src="./images/logo_ok.webp" width="150px">
-        <h1>JunkJedis</h1></div>
+        <img src="./images/logo_verde.png" width="200px">
 
 </div>
 <br>
 <div class="text-center"> <h2><u>Cosa puoi fare con l'app?</u></h2> </div>
 <br>
-<div class="c1"> Con JunkJedis puoi:</div>
+<div class="c1"> Con VerdeCapitale puoi:</div>
 <div class="c2">
 <ul >
     <li>Rimanere aggiornato sui giorni di raccolta dei rifiuti nella zona e tutte le informazioni necessarie per una corretta raccolta differenziata</li>
@@ -93,7 +92,7 @@
 </ul>
 </div>
 <br>
-<div class="text-center"> <h2><u>Ultime comunicazioni</u></h2> </div>
+<div class="titoli"> <b><u>Ultime comunicazioni</u></b> </div>
 <br>
 
 <div class="owl-carousel owl-theme">
